rebirth-responsive: close active fix on mobiles

--- a/src/modules/dex/directives/dexWatchlist/watchlist.less
+++ b/src/modules/dex/directives/dexWatchlist/watchlist.less
@@ -83,14 +83,17 @@ w-dex-watchlist {
       right: 3px;
       top: 50%;
       opacity: 0.89;
-      background: @color-error-400 url(/img/icons/white_cancel.svg) no-repeat center;
+      background: url(/img/icons/white_cancel.svg) no-repeat center @color-error-400;
       cursor: pointer;
     }
   }
 
-  w-row:hover .remove-item,
-  w-row .selected .remove-item {
+  w-row:hover .remove-item {
     display: block;
+  }
+
+  w-row .selected .remove-item {
+    display: none;
   }
 
   .cell-2, .cell-3 {
@@ -145,4 +148,11 @@ w-dex-watchlist {
     }
   }
 
+}
+
+@media screen and (max-width: 768px) {
+  w-row div:not(.selected) .remove-item {
+    display: block;
+    background: url(/img/icons/order_cancel.svg) no-repeat center transparent;
+  }
 }
