--- a/src/modules/dex/less/dex.less
+++ b/src/modules/dex/less/dex.less
@@ -248,11 +248,3 @@ body.dex {
   }
 
 }
-
-
-//iPad Pro
-//@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
-  w-dex-my-orders w-row .stop {
-
-  }
-//}
